Add comments and refactore base config
