# internal/handler/articles.go
@@ -20,7 +20,7 @@ import (
 // @ID project-id
 // @Accept  json
 // @Produce  json
-// @Param input body model.Article true "project information"
+// @Param input body dto.CreateArticle true "project information"
 // @Success 200 {integer} integer 1
 // @Failure 400,404 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
@@ -109,6 +109,54 @@ func (h *Handler) getAllArticles(c *fiber.Ctx) error {
 	})
 }
 
+// @Summary Get article by id and user id
+// @Security ApiKeyAuth
+// @Tags articles
+// @Description Get articles by id and user id
+// @ID get-article-by-id-and-user-id
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} map[string]interface{}
+// @Failure 400,404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Failure default {object} map[string]interface{}
+// @Router /api/v1/articles/:id [get]
+func (h *Handler) getArticleByID(c *fiber.Ctx) error {
+	l := logging.LoggerFromContext(c.UserContext())
+	l.Info("Getting article by id... ")
+
+	userId, err := getUserId(c)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	articleID := c.Params("id", "")
+	if articleID == "" {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": apperror.ErrParameterNotFound,
+		})
+	}
+
+	article, err := h.services.Articles.GetByID(c.UserContext(), articleID, userId)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"errors":  false,
+		"message": nil,
+		"user_id": c.GetRespHeader(userCtx, ""),
+		"article": article,
+	})
+}
+
 // @Summary Update an article by id
 // @Security ApiKeyAuth
 // @Tags articles
@@ -116,16 +164,17 @@ func (h *Handler) getAllArticles(c *fiber.Ctx) error {
 // @ID update-title-by-id
 // @Accept  json
 // @Produce  json
+// @Param input body dto.UpdateArticle true "project information"
 // @Success 200 {object} map[string]interface{}
 // @Failure 400 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Failure default {object} map[string]interface{}
-// @Router /api/v1/title/:id [put]
+// @Router /api/v1/articles/:id [put]
 func (h *Handler) updateArticle(c *fiber.Ctx) error {
 	l := logging.LoggerFromContext(c.UserContext())
 	l.Info("Updating a project... ")
 
-	userId, err := getUserId(c)
+	userID, err := getUserId(c)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"errors":  true,
@@ -134,8 +183,9 @@ func (h *Handler) updateArticle(c *fiber.Ctx) error {
 	}
 
 	var input dto.UpdateArticle
-	projectId := c.Params("id", "")
-	if projectId == "" {
+
+	articleID := c.Params("id", "")
+	if articleID == "" {
 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
 			"errors":  true,
 			"message": apperror.ErrParameterNotFound,
@@ -157,7 +207,7 @@ func (h *Handler) updateArticle(c *fiber.Ctx) error {
 		})
 	}
 
-	err = h.services.Articles.Update(c.UserContext(), userId, input)
+	err = h.services.Articles.Update(c.UserContext(), articleID, userID, input)
 	if err != nil {
 		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
 			"errors":  true,
@@ -208,4 +258,180 @@ func (h *Handler) deleteArticle(c *fiber.Ctx) error {
 	}
 
 	return c.Status(http.StatusNoContent).JSON(fiber.Map{"message": "Article deleted"})
+}
+
+// @Summary Comment an article
+// @Security ApiKeyAuth
+// @Tags articles
+// @Description Method for commenting an article by id and user id
+// @ID project-id
+// @Accept  json
+// @Produce  json
+// @Param input body dto.CreateComment true "comment information"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Failure default {object} map[string]interface{}
+// @Router /api/v1/articles/:id/comments [post]
+func (h *Handler) commentArticle(c *fiber.Ctx) error {
+	l := logging.LoggerFromContext(c.UserContext())
+	l.Info("Commenting an article")
+
+	userID, err := getUserId(c)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	articleID := c.Params("id", "")
+	if articleID == "" {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": apperror.ErrParameterNotFound,
+		})
+	}
+
+	var input dto.CreateComment
+	if err := c.BodyParser(&input); err != nil {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": apperror.ErrBodyParsed,
+		})
+	}
+
+	validate := validator.New()
+	if err := validate.Struct(input); err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": validation.ValidatorErrors(err),
+		})
+	}
+
+	err = h.services.Articles.CommentByID(c.UserContext(), articleID, userID, input)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	return c.Status(http.StatusNoContent).JSON(fiber.Map{"message": "Article commented"})
+}
+
+// @Summary Get all comments by article id
+// @Security ApiKeyAuth
+// @Tags articles
+// @Description Get all comments of an article
+// @ID get-all-comments-by-article-id
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} map[string]interface{}
+// @Failure 400,404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Failure default {object} map[string]interface{}
+// @Router /api/v1/articles/:id/comments [get]
+func (h *Handler) getCommentsByArticleID(c *fiber.Ctx) error {
+	l := logging.LoggerFromContext(c.UserContext())
+	l.Info("Get all comments by article id... ")
+
+	articleID := c.Params("id")
+	if articleID == "" {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": apperror.ErrParameterNotFound,
+		})
+	}
+
+	comments, err := h.services.Articles.GetCommentsByArticleID(c.UserContext(), articleID)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"errors":   false,
+		"message":  nil,
+		"count":    len(comments),
+		"user_id":  c.GetRespHeader(userCtx, ""),
+		"comments": comments,
+	})
+}
+
+// @Summary Reply to comment by article id and comment id
+// @Security ApiKeyAuth
+// @Tags articles
+// @Description Reply to comment of an article
+// @ID reply-to-comment-by-article-id-and-comment-id
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} map[string]interface{}
+// @Failure 400,404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Failure default {object} map[string]interface{}
+// @Router /api/v1/articles/:id/comments/:comment-id/replies [post]
+func (h *Handler) replyToCommentByID(c *fiber.Ctx) error {
+	l := logging.LoggerFromContext(c.UserContext())
+	l.Info("Replying to comment... ")
+
+	userID, err := getUserId(c)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	articleID := c.Params("id")
+	if articleID == "" {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": apperror.ErrParameterNotFound,
+		})
+	}
+
+	parentCommentID := c.Params("commentID")
+	if parentCommentID == "" {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": apperror.ErrParameterNotFound,
+		})
+	}
+
+	var input dto.ReplyToComment
+	if err := c.BodyParser(&input); err != nil {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": apperror.ErrBodyParsed,
+		})
+	}
+
+	validate := validator.New()
+	if err := validate.Struct(input); err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": validation.ValidatorErrors(err),
+		})
+	}
+
+	err = h.services.Articles.ReplyToCommentByArticleIDAndCommentID(c.UserContext(),
+		articleID,
+		userID,
+		parentCommentID,
+		input)
+
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"errors":  false,
+		"message": "Replied to the comment successfully",
+	})
 }
